cluster/kubernetes/observability/grafana/ingress/grafana-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: grafana
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: grafana
          port: 80
